[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Core Tauri dependency (no "all" features here )
tauri = { version = "2.5.0", features = [] }

# Async runtime for Rust
tokio = { version = "1.x", features = ["full"] }

# HTTP client for downloading videos
reqwest = { version = "0.11", features = ["json", "stream"] }

# For URL parsing
url = "2.2"

# For async stream handling (used by reqwest's stream)
futures = "0.3"

# For creating temporary files/directories for downloads
tempfile = "3.2"

# For generating unique filenames with timestamps
chrono = { version = "0.4", features = ["std"] }

# For automatic FFmpeg download and management
ffmpeg-sidecar = "0.2"
tauri-plugin-log = "2.0.0"
log = "0.4"


